--- a/journal.html
+++ b/journal.html
@@ -27,5 +27,14 @@
   <li><a href="http://www.tinycorelinux.net/9.x/armv6/releases/RPi/">Stable release downloads for piCore</a>
   <li><a href="http://www.tinycorelinux.net/9.x/armv6/releases/RPi/README">piCore README, with instructions for loading/prep</a>
   </ul>
+  <h3>7 February (in class)</h3>
+  <p>I attempted again to properly partition the microSD.  This time, however, the partitions appeared to be out of order this time. <br>
+    I did figure out how to partition (it's easier than it looks), and even took comprehensive notes on my laptop.  Unfortunately, said <br>
+    notes file went missing--probably because I subconsciously forgot to save.  In the meantime, the partitions were still out of order <br>
+    and I couldn't complete step 4 of partitioning according to the README.  I will wipe and reload the MicroSD and try again later. </p>
+  <p><strong>References:</strong></p>
+  <ul>
+    <li><a href="http://www.tinycorelinux.net/9.x/armv6/releases/RPi/README">piCore README, with instructions for loading/prep</a>
+  </ul>
 </body>
 </html>
