--- a/journal_goals.html
+++ b/journal_goals.html
@@ -8,6 +8,9 @@
   <h1>My goals for exploring the Raspberry Pi are:</h1>
   <ul>
   <li>Load an ultra-lightweight distro for examination--lighter weight OS'es are less complex.
+    <ul>
+    <li>Successfully load and partition on the microSD card (piCore).
+    </ul>
   <li>Examine the files and directories to learn what comprises a basic Linux OS.
   <li>Distinguish what files serve what purposes.
   </ul>
