--- a/journal.html
+++ b/journal.html
@@ -239,5 +239,66 @@ Reply: first a black screen, then the GUI appears!  Hallelujah! <br />
 What's better: I should no longer have to deal with command lines on this OS unless I use the <br />
 terminal. <br /><br />
 
+Unit II: Teaching oneself to use Tiny Core Linux (piCore)<br />
+
+First glance: <br />
+I see a cyan/blue gradient background with the Tiny Core Linux logo in the middle.  On the bottom <br />
+is a dock reminiscent of the Macintosh line of desktop OSes.  On this dock are eight icons, in <br />
+order: Exit, Editor, Control Panel, Apps, RunProgram, MountTool, Terminal, and mc.  Upon clicking <br />
+each to try to open them, only the Terminal and mc (which appears to be a file explorer) open up. <br /><br />
+
+Clicking and right clicking on the background brings up a drop-down main menu with the following <br />
+options:  the <strong>desktops</strong> you have available (which lead into drop down menus with applications <br />
+active on these desktops or the option to close the desktop if no apps are active), a drop-down <br />
+menu labeled <strong>Sticky</strong> which only appears when multiple desktops are open (no idea what this does), <br />
+any applications you have open (this sets focus on these apps, much like clicking inside an inactive <br />
+app to focus on it), <strong>Applications, System Tools, New Desktop, and Exit.</strong><br /><br />
+
+The <strong>Applications</strong> option opens into a drop down menu with the following choices: mc and Terminal. <br />
+These were the only docked applications I could open. <br /><br />
+
+The <strong>System Tools</strong> menu opens into a drop down menu with twelve options: <em>Apps, ControlPanel, Editor, <br />
+  Exit, MountTool, RunProgram, ScreenShot, Services, SetTime, tc-wbarconf, Top, and Xkill.</em><br />
+<ul>
+  <li><em>Apps</em> doesn't seem to do anything.
+  <li><em>ControlPanel</em> doesn't seem to do anything.
+  <li><em>Editor</em> doesn't seem to do anything.
+  <li><em>Exit</em> doesn't seem to do anything.
+  <li><em>MountTool</em> doesn't seem to do anything--but maybe, based off the name, I would need to <br />
+    mount a USB in order to use this.  I'll try this out later.
+  <li><em>RunProgram</em> doesn't seem to do anything.
+  <li><em>ScreenShot</em> causes the cursor to blink once about a second after clicking.  This feedback <br />
+    most likely is an indicator of this tool's functionality.
+  <li><em>Services</em> doesn't seem to do anything.
+  <li><em>SetTime</em> doesn't seem to do anything.  There isn't even a clock on the desktop.
+  <li><em>tc-wbarconf</em> doesn't seem to do anything.  The name doesn't suggest anything familiar.
+  <li><em>Top</em> opens what appears to be a list of running processes (task manager???)
+  <li><em>Xkill</em> turns the cursor into a skull-and-crossbones.  Clicking the on the background in <br />
+    this state does nothing and reverts to the regular cursor.  Clicking on an application in this state <br />
+    closes it and reverts to the regular cursor.  Therefore, Xkill works as a force-stop tool.
+</ul><br /><br />
+
+The <strong>New Desktop</strong> option generates an extra desktop to work in, adding the Desktop and Sticky options <br />
+  to the main menu if they are not already present.<br /><br />
+  
+<strong>Exit</strong>, like the similar option under <strong>System Tools</strong> doesn't seem to do anything.<br />
+At this rate, I'll have to use the terminal and the sudo prefix to reboot or power off the computer.<br /><br />
+
+<a href="http://www.tinycorelinux.net/book.html">http://www.tinycorelinux.net/book.html</a>
+This link presents the option of downloading a PDF called "Into the Core: a look at Tiny Core Linux". <br />
+The README also referred to this book as being a valuable source for learning the basics of this <br />
+operating system.  I'm going to go ahead and download the PDF and continue from there.<br /><br />
+
+Excerpt from the article on ZDnet, retrieved 31st of last month:
+<a href="https://www.zdnet.com/article/hands-on-with-picore-7-0-tiny-core-linux-for-the-raspberry-pi/">https://www.zdnet.com/article/hands-on-with-picore-7-0-tiny-core-linux-for-the-raspberry-pi/</a><br />
+"piCore is certainly not for everyone -- but then again neither is Tiny Core, or any of the other Core <br />
+distributions, for that matter. piCore is intended for intermediate to advanced Linux users who want a <br />
+solid base on which to build their own system, making it exactly what they want." <br /><br />
+
+Okay.  I'm not entirely sure what packages I might be missing from the TC download/install, nor what I <br />
+need to do to track down these missing packages, but I do feel as if I've got a solid footing here.  I <br />
+will put this project on hold for right now, and use my second microSD card to load another <br />
+Debian-based Linux distro, Raspbian, for another project that the Professor just revealed. <br /><br />
+
 </body>
 </html>
