--- a/journal.html
+++ b/journal.html
@@ -8,7 +8,7 @@
 <body>
   <h1>piJournal</h1>
   <p>This webpage is a journal for chronicling my exploration of the Raspberry Pi.</p>
-  <h3>31 January (in class)</h3>
+  <h3>31 January 2019</h3>
   <p>Assignment revealed.  We were to load an operating system on a Raspberry Pi computer and begin to explore its capabilities. <br>
   As I have already had experence from last semester, I wanted to seek out a different OS from the two I've already used: Raspbian,<br>
   a Debian-based OS designed specifically for the Raspberry Pi, and ubuntuMATE, version 16.04 (Xenial Xerus), optimized and ported <br>
@@ -27,7 +27,7 @@
   <li><a href="http://www.tinycorelinux.net/9.x/armv6/releases/RPi/">Stable release downloads for piCore</a>
   <li><a href="http://www.tinycorelinux.net/9.x/armv6/releases/RPi/README">piCore README, with instructions for loading/prep</a>
   </ul>
-  <h3>7 February (in class)</h3>
+  <h3>7 February 2019</h3>
   <p>I attempted again to properly partition the microSD.  This time, however, the partitions appeared to be out of order this time. <br>
     I did figure out how to partition (it's easier than it looks), and even took comprehensive notes on my laptop.  Unfortunately, said <br>
     notes file went missing--probably because I subconsciously forgot to save.  In the meantime, the partitions were still out of order <br>
@@ -101,8 +101,6 @@ Units: sectors of 1 * 512 = 512 bytes <br /><br />
 Device:     Boot  StartCHS  EndCHS    StartLBA    EndLBA    Sectors   Size    Id    Type <br />
 /dev/mmcblk0p1    4,0,1     37,63,32  8192        77823     69632     34.0M   c     Win95 FAT32 (LBA) <br />
 /dev/mmcblk0p2    38,0,1    48,63,32  77824       62333951  22528     29.6G   83    Linux <br /><br />
-
-
 
 That might be a bit much for a minimalist OS, but we'll see. <br />
 I'm gonna go ahead and write this... <br />
@@ -284,12 +282,12 @@ The <strong>New Desktop</strong> option generates an extra desktop to work in, a
 <strong>Exit</strong>, like the similar option under <strong>System Tools</strong> doesn't seem to do anything.<br />
 At this rate, I'll have to use the terminal and the sudo prefix to reboot or power off the computer.<br /><br />
 
-<a href="http://www.tinycorelinux.net/book.html">http://www.tinycorelinux.net/book.html</a>
+<a href="http://www.tinycorelinux.net/book.html">http://www.tinycorelinux.net/book.html</a><br />
 This link presents the option of downloading a PDF called "Into the Core: a look at Tiny Core Linux". <br />
 The README also referred to this book as being a valuable source for learning the basics of this <br />
 operating system.  I'm going to go ahead and download the PDF and continue from there.<br /><br />
 
-Excerpt from the article on ZDnet, retrieved 31st of last month:
+Excerpt from the article on ZDnet, retrieved 31st of last month:<br />
 <a href="https://www.zdnet.com/article/hands-on-with-picore-7-0-tiny-core-linux-for-the-raspberry-pi/">https://www.zdnet.com/article/hands-on-with-picore-7-0-tiny-core-linux-for-the-raspberry-pi/</a><br />
 "piCore is certainly not for everyone -- but then again neither is Tiny Core, or any of the other Core <br />
 distributions, for that matter. piCore is intended for intermediate to advanced Linux users who want a <br />
@@ -298,7 +296,13 @@ solid base on which to build their own system, making it exactly what they want.
 Okay.  I'm not entirely sure what packages I might be missing from the TC download/install, nor what I <br />
 need to do to track down these missing packages, but I do feel as if I've got a solid footing here.  I <br />
 will put this project on hold for right now, and use my second microSD card to load another <br />
-Debian-based Linux distro, Raspbian, for another project that the Professor just revealed. <br /><br />
+Debian-based Linux distro, Raspbian, for another project that the Professor just revealed.
 
+<h3>18 February 2019</h3>  
+
+<p>Loaded Raspbian OS (Full) on a second SD card.</p>
+  
+<h3>21 February 2018</h3>
+  
 </body>
 </html>
